# Electrical-Components-Web-Scraper

./: .gitignore  README.md  example.py  main.py  pyproject.toml  run.py  scraper.ipynb  scraper_experimentation.ipynb
abb_viewmodal_example/: abb_page_viewmodel_data.json
output/: comparison.xlsx
scraper/: BrandScraper.py  CanonicalContactor.py  CanonicalMCB.py  CanonicalMCCB.py  __init__.py  __main__.py  base.py  main.py  utils.py
scraper/brands/: __init__.py  abb.py  hager.py
